--- a/mygame.html
+++ b/mygame.html
@@ -184,24 +184,22 @@ VAR a
 </script>
 
 <style>
-html {
-	margin:0px;
-	padding:0px;
-}
+/*html { height: 592px; }*/
 
 body {
-	margin:0px;
-	padding:0px;
+	width:100%;
+	height:100%;
 	overflow:hidden;
-	background:#ffffff;
+	background:#7f7e80;
 }
 
 #game {
 	background:black;
-	width:100vw;
-	max-width:100vh;
-	margin:auto;
-	display:block;
+	margin: 0 auto;
+	margin-top: 40px;
+	display: block;
+	width:640px;
+	height:@@Z;
 }
 </style>
 
