Made a first sketch of v r 1 room in Bitsy visual mode
? Worthwhile (as always) to just make the attempt. It's not especially satisfying to look at, but it introduced me to several considerations I'll need to address moving forward. Notably questions around scale (how big should the room be on the screen given I need to, for instance, duplicate it in different modes - or should those happen on linked screens?), questions around the insanely limited drawing tool (which is a good challenge, but for example you literally have two colours to draw with against the background!), questions around resolution (I'd naively been assuming a very block-y look, but really the small amount of resolution Bitsy has available probably needs to be leveraged hard to make it look right), the question of 2D, or 2D3D kind of style of drawing (I'd assumed totally top down, but there's planty you can't represent that way).

? Alongside those kinds of drawing-oriented questions is the big question of approach at the philosophical level. Is this project about trying to recreate the actual games v r 1, v r 2, v r 3 and thus to replicate them visually (since that's pretty much all I can do with Bitsy) and a bit interactively? Or is it about trying to follow the protocols of those games (e.g. different forms of assembly/disassembly/replication/etc. for v r 1, hiding objects in plinths in v r 2, examining water in v r 3). Those are pretty radically different things to do. It seems relatively clear (?) to me that the second approach is the more interesting one that might tell me more interesting things about Bitsy and limitations? But I still have to think about how to answer those questions.

? Again, this idea of translation is, I think, incredibly generative of hard, specific questions about design and implementation. Really brings those things to the fore and allows you to talk about them quite specifically. This is happening with Chogue too, by the by.

? I am having some trouble with Bitsy's

--- a/mygame.html
+++ b/mygame.html
@@ -4,10 +4,10 @@
 <!-- HEADER -->
 <head>
 
-<title>Pippin Barr presents...</title>
+<title></title>
 
 <script type="bitsyGameData" id="exportedGameData">
-Pippin Barr presents...
+
 
 # BITSY VERSION 4.8
 
@@ -24,6 +24,12 @@ PAL 1
 255,243,166
 253,186,183
 
+PAL 2
+NAME vr1_palette
+130,130,130
+217,217,217
+255,255,255
+
 ROOM 1
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -33,7 +39,7 @@ ROOM 1
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,a,b,c,0,0,0,0,0,0
-0,0,0,0,0,0,0,a,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -68,6 +74,26 @@ ROOM 2
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 NAME menu
 PAL 0
+
+ROOM 3
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,g,g,g,i,i,g,g,g,0,0,0,0
+0,0,0,0,g,0,0,h,h,0,0,g,0,0,0,0
+0,0,0,0,g,0,0,0,0,0,0,g,0,0,0,0
+0,0,0,0,g,0,0,0,0,0,0,g,0,0,0,0
+0,0,0,0,g,0,0,0,0,0,0,g,0,0,0,0
+0,0,0,0,g,0,0,0,0,0,0,g,0,0,0,0
+0,0,0,0,g,0,0,0,0,0,0,g,0,0,0,0
+0,0,0,0,g,0,g,g,0,0,j,g,0,0,0,0
+0,0,0,0,g,0,g,g,0,0,0,0,0,0,0,0
+0,0,0,0,g,0,g,g,0,0,0,g,0,0,0,0
+0,0,0,0,g,0,0,0,0,0,0,g,0,0,0,0
+0,0,0,0,g,g,g,g,g,g,g,g,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+NAME vr1_01
+PAL 2
 
 TIL a
 00000000
@@ -136,28 +162,72 @@ TIL f
 01100000
 NAME number_3
 
+TIL g
+11111111
+11111111
+11111111
+11111111
+11111111
+11111111
+11111111
+11111111
+NAME vr1_wall
+
+TIL h
+00000000
+10101010
+11111111
+10101010
+10101010
+11111111
+10101010
+00000000
+NAME vr1_radiator
+
+TIL i
+00000000
+00000000
+00000000
+11111111
+11111111
+11111111
+11111111
+00000000
+NAME vr1_window_h
+
+TIL j
+11000000
+01100000
+00110000
+00011000
+00001100
+00000110
+00000011
+00000001
+NAME vr1_door
+
 SPR A
-00000000
-00000000
-00000000
-00010000
-00000000
-00000000
-00000000
-00000000
+00011000
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+00011000
 POS 1 8,13
 
 SPR a
 00000000
+00111100
+01111110
+01111110
+01111110
+01111110
+00111100
 00000000
-00000000
-00000000
-00000000
-00000000
-00000000
-00000000
-DLG SPR_0
-POS 1 7,8
+NAME vr1_tube
+POS 3 9,11
 
 ITM 0
 00000000
@@ -171,9 +241,6 @@ ITM 0
 NAME tea
 DLG ITM_0
 
-DLG SPR_0
-I'm a cat
-
 DLG ITM_0
 You found a nice warm cup of tea
 
@@ -184,22 +251,24 @@ VAR a
 </script>
 
 <style>
-/*html { height: 592px; }*/
+html {
+	margin:0px;
+	padding:0px;
+}
 
 body {
-	width:100%;
-	height:100%;
+	margin:0px;
+	padding:0px;
 	overflow:hidden;
 	background:#7f7e80;
 }
 
 #game {
 	background:black;
-	margin: 0 auto;
-	margin-top: 40px;
-	display: block;
-	width:640px;
-	height:@@Z;
+	width:100vw;
+	max-width:100vh;
+	margin:auto;
+	display:block;
 }
 </style>
 
