Created door-to-door scene as a first attempt at an actual variable that was easy to know how to do
? Worked out well I think. I'm struck by the fact that (to me at least) the space looks genuinely eerie in juxtaposition to the original level. There's something about doing this in Bitsy, perhaps, that makes it look almost more uncanny than it did in Unity? Perhaps I'm just less attuned to the Bitsy aesthetic or have seen fewer low resolution spatially-strange games? But it has more of an affective impact than expected. The technology involved here wasn't so complex... although

? Had to create duplicate sprites in order to have two instances of the radiator, the bed, the tube, the trunk. There's something good there ontologically - they're genuine duplicates rather than instantiations of the "same thing". Perhaps that's actually a better capturing of the Schneider idea than Unity afforded in some ways. The radiator, being not quite perfectly symmetrical, even required me to draw a slightly different flipped version, a bizarro radiator.

? Had to make a decision about the seam between the rooms. In the original game the two rooms and flush with one another, whereas because I've chosen to have thinner walls in Bitsy there's actually a gap, with a thin wall on either side of the tile than runs down the middle - a special tile only for this level, a kind of glue. Functionally it's "the same" to the extent you still can't enter the rooms, but visually there's a seam you can look at.

? Now that you can't go into the rooms there's another point raised I hadn't thought of around visibility. In this scene in the original game you _cannot see the radiator_ because you can't enter the rooms and the only viewpoint is thus looking in through the window, which leaves the radiator out of sight since it's directly below the window. In the Bitsy version you can see the entire contents of both rooms at a glance. So that's a really substantial difference. It's a difference I think ma

--- a/v-r-1/index.html
+++ b/v-r-1/index.html
@@ -39,6 +39,26 @@ ROOM 0
 NAME start
 PAL 0
 
+ROOM 1
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,b,b,a,b,b,k,b,b,a,b,b,d,0,0
+0,c,b,b,0,b,b,k,b,b,0,b,b,d,0,0
+0,c,0,0,0,0,h,k,m,0,0,0,0,d,0,0
+0,c,0,0,0,0,f,k,l,0,0,0,0,d,0,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,d,0,0
+0,c,0,0,0,0,0,k,0,0,0,0,0,d,0,0
+0,c,e,e,e,e,e,k,e,e,e,e,e,d,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+NAME door_to_door
+PAL 0
+
 TIL a
 11111111
 00000000
@@ -144,6 +164,42 @@ TIL j
 01000000
 NAME landscape_2
 
+TIL k
+11000011
+11000011
+11000011
+11000011
+11000011
+11000011
+11000011
+11000011
+NAME middle_wall
+WAL true
+
+TIL l
+01111100
+01111100
+01111100
+01111000
+01110000
+01100000
+01000000
+00000000
+NAME door_bottom_h_mirror
+WAL true
+
+TIL m
+00000000
+00000100
+00001100
+00011100
+00111100
+01111100
+01111100
+01110100
+NAME door_top_h_mirror
+WAL true
+
 SPR A
 00011000
 00111100
@@ -153,7 +209,7 @@ SPR A
 00111100
 00111100
 00011000
-POS 0 14,8
+POS 1 14,9
 
 SPR a
 00000000
@@ -165,7 +221,7 @@ SPR a
 10101010
 00000000
 NAME radiator
-POS 0 7,5
+POS 1 4,5
 
 SPR b
 00000000
@@ -177,7 +233,7 @@ SPR b
 00011000
 00000000
 NAME tube
-POS 0 9,9
+POS 1 6,9
 
 SPR c
 00000000
@@ -189,7 +245,7 @@ SPR c
 01111110
 00000000
 NAME box
-POS 0 8,9
+POS 1 5,9
 
 SPR d
 00111111
@@ -201,7 +257,7 @@ SPR d
 01100000
 01100000
 NAME bed_top_left
-POS 0 5,8
+POS 1 2,8
 
 SPR e
 11111100
@@ -213,7 +269,7 @@ SPR e
 00000110
 00000110
 NAME bed_top_right
-POS 0 6,8
+POS 1 3,8
 
 SPR f
 01100000
@@ -225,7 +281,7 @@ SPR f
 01110000
 00111111
 NAME bed_bottom_left
-POS 0 5,9
+POS 1 2,9
 
 SPR g
 00000110
@@ -237,7 +293,91 @@ SPR g
 00001110
 11111100
 NAME bed_bottom_right
-POS 0 6,9
+POS 1 3,9
+
+SPR h
+00000000
+01010101
+01111111
+01010101
+01010101
+01111111
+01010101
+00000000
+NAME radiator2
+POS 1 10,5
+
+SPR i
+00000000
+00011000
+00011000
+00011000
+00011000
+00011000
+00011000
+00000000
+NAME tube2
+POS 1 8,9
+
+SPR j
+00000000
+01111110
+01111110
+01111110
+00000000
+01111110
+01111110
+00000000
+NAME trunk2
+POS 1 9,9
+
+SPR k
+00111111
+01111111
+01111111
+01100000
+01100000
+01100000
+01100000
+01100000
+NAME bed_top_left_h_mirror
+POS 1 11,8
+
+SPR l
+11111100
+11111110
+11111110
+00000110
+00000110
+00000110
+00000110
+00000110
+NAME bed_top_right_h_mirror
+POS 1 12,8
+
+SPR m
+01100000
+01100000
+01100000
+01111111
+01110000
+01110000
+01110000
+00111111
+NAME bed_bottom_left_h_mirror
+POS 1 11,9
+
+SPR n
+00000110
+00000110
+00000110
+11111110
+00001110
+00001110
+00001110
+11111100
+NAME bed_bottom_right_h_mirror
+POS 1 12,9
 
 ITM 0
 00000000
