Added dialog to basic objects, new tile for join between left wall and bottom wall, realisation about uniqueness of sprites
? I added very simple descriptive dialogs to the items in the room, as represented by the sprites. It's in that moment I realised that this status of 'sprite' versus 'tile' feels really important - things that are objects versus things that are 'just' spatial elements? A difference in ontological status, and indeed function - only sprites have the ability to have dialog, to say something more than their visual appearance conveys. A super power. They're also important/different because as I also realised...

? ... you can only have ONE instance of a sprite in the game! As far as I can tell? I was wondering why sprites were vanishing when I made a new room, and it seems to be because you can only have a singular appearance of any one sprite. Which seems... well, incredibly counter-intuitive to me just in terms of what sprites are for one thing. It also feels like it will be INCREDIBLY INCONVENIENT as I'll have to recreate every sprite for every room. And then ON THE OTHER HAND HOW APPROPRIATE FOR A SCHNEIDER GAME? Having to hand craft every object every time is exactly how his work functions. This is an instance (if I don't 'fix' it) where Bitsy is the more authentic tool. You could do this with Unity too of course, but Bitsy appears to REQUIRE it - it has, in some way, the same ontological perspective as Schneider.

? I also 'fixed' the join of the left wall to the bottom wall. I kept thinking I wouldn't bother, but it feels important visually, and having done it it feels like the room has greater physical integrity.

--- a/v-r-1/index.html
+++ b/v-r-1/index.html
@@ -25,12 +25,12 @@ ROOM 0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
-0,0,0,0,c,b,b,b,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,0,0,0,0,h,d,0,0,0,0,0
 0,0,0,0,c,0,0,0,0,f,d,0,0,0,0,0
-0,0,0,0,c,c,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,c,0,0,0,0,d,0,0,0,0,0
-0,0,0,0,c,e,e,e,e,e,d,0,0,0,0,0
+0,0,0,0,c,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
+0,0,0,0,n,e,e,e,e,e,d,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -50,7 +50,7 @@ ROOM 1
 0,c,0,0,0,0,f,k,l,0,0,0,0,d,0,0
 0,c,0,0,0,0,0,0,0,0,0,0,0,d,0,0
 0,c,0,0,0,0,0,k,0,0,0,0,0,d,0,0
-0,c,e,e,e,e,e,k,e,e,e,e,e,d,0,0
+0,n,e,e,e,e,e,k,e,e,e,e,e,d,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -200,6 +200,18 @@ TIL m
 NAME door_top_h_mirror
 WAL true
 
+TIL n
+00000011
+00000011
+00000011
+00000011
+00000011
+00000011
+00000011
+00000011
+NAME left_wall_bottom
+WAL true
+
 SPR A
 00011000
 00111100
@@ -209,7 +221,7 @@ SPR A
 00111100
 00111100
 00011000
-POS 1 14,9
+POS 0 13,8
 
 SPR a
 00000000
@@ -221,7 +233,8 @@ SPR a
 10101010
 00000000
 NAME radiator
-POS 1 4,5
+DLG SPR_1
+POS 0 7,5
 
 SPR b
 00000000
@@ -233,7 +246,8 @@ SPR b
 00011000
 00000000
 NAME tube
-POS 1 6,9
+DLG SPR_0
+POS 0 9,9
 
 SPR c
 00000000
@@ -245,7 +259,8 @@ SPR c
 01111110
 00000000
 NAME box
-POS 1 5,9
+DLG SPR_3
+POS 0 8,9
 
 SPR d
 00111111
@@ -257,7 +272,7 @@ SPR d
 01100000
 01100000
 NAME bed_top_left
-POS 1 2,8
+POS 0 5,8
 
 SPR e
 11111100
@@ -269,7 +284,8 @@ SPR e
 00000110
 00000110
 NAME bed_top_right
-POS 1 3,8
+DLG SPR_2
+POS 0 6,8
 
 SPR f
 01100000
@@ -281,7 +297,7 @@ SPR f
 01110000
 00111111
 NAME bed_bottom_left
-POS 1 2,9
+POS 0 5,9
 
 SPR g
 00000110
@@ -293,7 +309,7 @@ SPR g
 00001110
 11111100
 NAME bed_bottom_right
-POS 1 3,9
+POS 0 6,9
 
 SPR h
 00000000
@@ -393,6 +409,21 @@ DLG ITM_0
 
 DLG ITM_0
 You found a nice warm cup of tea
+
+DLG SPR_0
+A metal tube.
+
+DLG SPR_1
+A radiator.
+
+DLG SPR_2
+A bed with a pillow and folded blanket.
+
+DLG SPR_3
+A metal trunk.
+
+DLG SPR_4
+A metal tube.
 
 VAR a
 42
