Added "organised" and floor tiles
? Organised looks kind of incredible I'd have to say, laid out every tile/sprite in a grid in order of frequency and type (so the sprites are at the end, the floor tiles are at the start). It's a good example, I think, of the reimagining of the "point" of v r 1 in the new engine. It also introduces something to think about: now there's a difference between trying to capture what Schneider was doing with u r 1 (replication, craft, etc.) and what I was doing to do othat with Unity in v r 1... both in Bitsy. Which is primary? How hard to struggle to do something in v r 1 that's Unity-specific (like leaning objects? Floating?) versus replacing them with a Schneider-oriented idea but for Bitsy, versus simply deleting them as 'impossible'? Serious.

? Floor tiles were added to every room literally so that the room that is a hold can actually look like a hole. Still need some kind of tile for the larger environment for the same fucking reason. (That will also help with 'hold in the ground' though.

--- a/v-r-1/index.html
+++ b/v-r-1/index.html
@@ -26,10 +26,10 @@ ROOM 0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,h,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,f,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
+0,0,0,0,c,0,0,q,q,q,0,0,0,0,0,0
+0,0,0,0,c,0,0,q,0,0,d,0,0,0,0,0
 0,0,0,0,n,e,e,e,e,e,d,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -46,10 +46,10 @@ ROOM 1
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,c,b,b,a,b,b,k,b,b,a,b,b,d,0,0
 0,c,b,b,0,b,b,k,b,b,0,b,b,d,0,0
-0,c,0,0,0,0,h,k,m,0,0,0,0,d,0,0
-0,c,0,0,0,0,f,k,l,0,0,0,0,d,0,0
-0,c,0,0,0,0,0,0,0,0,0,0,0,d,0,0
-0,c,0,0,0,0,0,k,0,0,0,0,0,d,0,0
+0,c,q,q,q,q,h,k,m,q,q,q,q,d,0,0
+0,c,q,q,q,q,f,k,l,q,q,q,q,d,0,0
+0,c,0,0,q,q,q,0,q,q,q,0,0,d,0,0
+0,c,0,0,q,0,q,k,0,0,q,0,0,d,0,0
 0,n,e,e,e,e,e,o,e,e,e,e,e,d,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -86,10 +86,10 @@ ROOM 3
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,q,d,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,q,d,0,0,0,0,0
+0,0,0,0,c,0,0,q,q,q,d,0,0,0,0,0
+0,0,0,0,c,0,0,q,0,0,d,0,0,0,0,0
 0,0,0,0,n,e,e,e,e,e,d,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -105,18 +105,38 @@ ROOM 4
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,c,b,b,b,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,b,b,b,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,p,d,0,0,0,0,0
+0,0,0,0,c,0,0,q,0,0,d,0,0,0,0,0
+0,0,0,0,c,0,0,q,q,q,0,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,p,d,0,0,0,0,0
 0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,h,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,f,d,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,0,0,0,0,0,d,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
+0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
+0,0,0,0,c,0,0,q,q,q,0,0,0,0,0,0
+0,0,0,0,c,0,0,q,0,0,d,0,0,0,0,0
 0,0,0,0,n,e,e,e,e,e,d,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 NAME window_to_window
+PAL 0
+
+ROOM 5
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,q,0,q,0,q,0,q,0,q,0,q,0,q,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,q,0,q,0,q,0,q,0,q,0,b,0,b,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,b,0,b,0,b,0,b,0,b,0,b,0,c,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,0,c,0,c,0,c,0,c,0,d,0,d,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,d,0,d,0,d,0,d,0,e,0,e,0,e,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,e,0,e,0,h,0,f,0,a,0,n,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+NAME organised
 PAL 0
 
 TIL a
@@ -295,6 +315,17 @@ TIL p
 00111110
 NAME window_to_window_door_bottom
 WAL true
+
+TIL q
+00000000
+00000100
+00000000
+00100000
+00000000
+00000100
+00000000
+01000000
+NAME floor_tile
 
 SPR 10
 00000110
@@ -609,7 +640,7 @@ SPR o
 01111110
 00000000
 NAME door_to_door_trunk_l
-POS 1 5,9
+POS 1 6,9
 
 SPR p
 00000000
@@ -621,7 +652,7 @@ SPR p
 00011000
 00000000
 NAME door_to_door_tube_l
-POS 1 4,9
+POS 1 5,9
 
 SPR q
 00111111
@@ -814,6 +845,90 @@ SPR 1f
 11111100
 NAME w2w_bed_t3
 POS 4 6,6
+
+SPR 1g
+00111111
+01111111
+01111111
+01100000
+01100000
+01100000
+01100000
+01100000
+NAME org_bed_1
+POS 5 13,11
+
+SPR 1h
+11111100
+11111110
+11111110
+00000110
+00000110
+00000110
+00000110
+00000110
+NAME org_bed_2
+POS 5 1,13
+
+SPR 1i
+00000110
+00000110
+00000110
+11111110
+00001110
+00001110
+00001110
+11111100
+NAME org_bed_3
+POS 5 3,13
+
+SPR 1j
+01100000
+01100000
+01100000
+01111111
+01110000
+01110000
+01110000
+00111111
+NAME org_bed_4
+POS 5 5,13
+
+SPR 1k
+00000000
+01111110
+01111110
+01111110
+00000000
+01111110
+01111110
+00000000
+NAME org_trunk
+POS 5 7,13
+
+SPR 1l
+00000000
+00011000
+00011000
+00011000
+00011000
+00011000
+00011000
+00000000
+NAME org_tube
+POS 5 9,13
+
+SPR 1m
+00000000
+10101010
+11111110
+10101010
+10101010
+11111110
+10101010
+00000000
+NAME org_radiator
+POS 5 11,13
 
 ITM 0
 00000000
