Added window-as-sprite (or item) to all rooms, tried out different approaches to the title
? The window-as-sprite looks so much better and actually gets at a key interaction/meaning from v r 1 much more effectively than before. Specifically, the window is a key point of interaction in most of the scenes in v r 1 - you approach it to look through and re-see the room in its new configuration. It's also often the trigger for going to the next space (now I think about it, that could be a conflict, ugh). By having it as a sprite it becomes possible to report the view via a dialog, which could help to clarify some spaces, and generally emphasises the activity of "looking" more generally than at specific, individual items.

? Originally I assumed I'd do the title as a room itself, like I had initially, but I feel like it's "more Bitsy" to just use the opening dialog that the engine provides. I worked out how many characters across it is to at least centre the title. I included a "by Pippin Barr" because that, too, felt like it was implied by the tool somehow?

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <!-- HEADER -->
 <head>
 
-<title>v r 1</title>
+<title>              b r 1                       by Pippin Barr</title>
 
 <script type="bitsyGameData" id="exportedGameData">
-v r 1
+              b r 1                       by Pippin Barr
 
 # BITSY VERSION 4.8
 
@@ -37,12 +37,18 @@ NAME palette_swap
 255,0,255
 0,255,255
 
+PAL 4
+NAME interstitial
+0,0,0
+255,255,255
+0,0,0
+
 ROOM 0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
@@ -62,7 +68,7 @@ ROOM 1
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,b,b,a,b,b,k,b,b,a,b,b,d,0,0
+0,c,b,b,0,b,b,k,b,b,0,b,b,d,0,0
 0,c,b,b,0,b,b,k,b,b,0,b,b,d,0,0
 0,c,q,q,q,q,h,k,m,q,q,q,q,d,0,0
 0,c,q,q,q,q,f,k,l,q,q,q,q,d,0,0
@@ -82,7 +88,7 @@ ROOM 2
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,0,0,0,0,h,d,0,0,0,0,0
 0,0,0,0,c,0,0,0,0,f,d,0,0,0,0,0
@@ -102,7 +108,7 @@ ROOM 3
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,q,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,q,d,0,0,0,0,0
@@ -126,7 +132,7 @@ ROOM 4
 0,0,0,0,c,0,0,q,0,0,d,0,0,0,0,0
 0,0,0,0,c,0,0,q,q,q,0,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,p,d,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
@@ -149,7 +155,7 @@ ROOM 5
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,d,0,d,0,d,0,d,0,e,0,e,0,e,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,e,0,e,0,h,0,f,0,a,0,n,0,0,0,0
+0,e,0,e,0,h,0,f,0,n,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -162,7 +168,7 @@ ROOM 6
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
@@ -202,7 +208,7 @@ ROOM 8
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,c,b,b,b,b,r,0,0,0,0,0
-0,0,0,0,0,c,b,s,b,b,r,0,0,0,0,0
+0,0,0,0,0,c,b,0,b,b,r,0,0,0,0,0
 0,0,0,0,0,c,b,b,b,b,r,0,0,0,0,0
 0,0,0,0,0,c,q,q,q,q,r,0,0,0,0,0
 0,0,0,0,0,c,q,q,q,q,r,0,0,0,0,0
@@ -224,7 +230,7 @@ ROOM 9
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,e,c,d,e,b,b,q,0,0,0,0,0
 0,0,0,0,d,h,q,b,q,c,0,0,0,0,0,0
-0,0,0,0,b,q,c,b,d,a,b,0,0,0,0,0
+0,0,0,0,b,q,c,b,d,0,b,0,0,0,0,0
 0,0,0,0,e,0,b,q,q,c,q,0,0,0,0,0
 0,0,0,0,0,d,q,0,d,q,c,0,0,0,0,0
 0,0,0,0,0,e,f,0,q,q,d,0,0,0,0,0
@@ -242,7 +248,7 @@ ROOM a
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
@@ -302,7 +308,7 @@ ROOM d
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,1c,1b,19,19,19,19,19,19,1a,0,0,0,0
 0,0,0,c,14,b,b,b,b,1d,b,d,0,0,0,0
 0,0,0,c,c,q,q,q,q,f,d,0,0,0,0,0
@@ -322,7 +328,7 @@ ROOM e
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
@@ -342,7 +348,7 @@ ROOM f
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,h,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,f,d,0,0,0,0,0
@@ -362,6 +368,7 @@ ITM 3 5,8
 ITM 4 6,8
 ITM 5 6,9
 ITM 6 5,9
+ITM 7 7,4
 PAL 0
 
 ROOM g
@@ -369,7 +376,7 @@ ROOM g
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,b,b,a,b,b,d,0,0,0,0,0
+0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,b,b,0,b,b,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,q,d,0,0,0,0,0
 0,0,0,0,c,q,q,q,q,q,d,0,0,0,0,0
@@ -389,7 +396,7 @@ ROOM h
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,1f,1h,1h,1i,1h,1h,1j,0,0,0,0,0
+0,0,0,0,1f,1h,1h,0,1h,1h,1j,0,0,0,0,0
 0,0,0,0,1f,1h,1h,0,1h,1h,1j,0,0,0,0,0
 0,0,0,0,1f,1l,1l,1l,1l,1m,1j,0,0,0,0,0
 0,0,0,0,1f,1l,1l,1l,1l,1n,1j,0,0,0,0,0
@@ -1420,6 +1427,90 @@ SPR 39
 NAME swap_bed_4
 POS e 5,9
 
+SPR 40
+01111111
+01100000
+01100000
+01100000
+01100000
+01100000
+01100000
+01100000
+NAME float_bed_6
+POS a 5,8
+
+SPR 41
+01100000
+01111111
+01110000
+01110000
+01110000
+00111111
+00000000
+00000000
+NAME float_bed_5
+POS a 5,9
+
+SPR 42
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME palette_w
+POS e 7,4
+
+SPR 43
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME end_window
+POS g 7,4
+
+SPR 44
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME anim_window
+POS h 7,4
+
+SPR 45
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME intersect_w2
+POS d 7,4
+
+SPR 46
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME upsidedown_window
+POS c 7,4
+
 SPR A
 00011000
 00111100
@@ -1429,7 +1520,7 @@ SPR A
 00111100
 00111100
 00011000
-POS e 13,8
+POS 0 13,8
 
 SPR a
 00000000
@@ -2075,6 +2166,7 @@ SPR 2d
 00000100
 00000000
 NAME door_in_floor_tube
+POS 8 7,9
 
 SPR 2e
 00000000
@@ -2086,6 +2178,7 @@ SPR 2e
 01110110
 00000000
 NAME door_in_floor_trunk
+POS 8 8,8
 
 SPR 2f
 00001110
@@ -2097,6 +2190,7 @@ SPR 2f
 00010011
 00010011
 NAME door_in_floor_bed_1
+POS 8 9,8
 
 SPR 2g
 00010011
@@ -2108,6 +2202,7 @@ SPR 2g
 00011111
 00001110
 NAME door_in_floor_bed_2
+POS 8 9,9
 
 SPR 2h
 00000000
@@ -2119,6 +2214,7 @@ SPR 2h
 11000000
 11000000
 NAME door_in_floor_light
+POS 8 6,6
 
 SPR 2i
 11000000
@@ -2130,6 +2226,7 @@ SPR 2i
 11000000
 11000000
 NAME door_in_floor_light_2
+POS 8 6,7
 
 SPR 2j
 01111110
@@ -2141,6 +2238,7 @@ SPR 2j
 01111110
 00000000
 NAME door_down_radiator
+POS b 7,4
 
 SPR 2k
 00000000
@@ -2152,6 +2250,7 @@ SPR 2k
 00000011
 00000011
 NAME door_down_light_1
+POS b 9,6
 
 SPR 2l
 00000011
@@ -2163,6 +2262,7 @@ SPR 2l
 00000011
 00000000
 NAME door_down_light_two
+POS b 9,7
 
 SPR 2m
 00000000
@@ -2174,6 +2274,7 @@ SPR 2m
 11111100
 00000000
 NAME door_down_tube
+POS b 7,9
 
 SPR 2n
 00000000
@@ -2185,6 +2286,7 @@ SPR 2n
 01110110
 01110110
 NAME door_down_trunk
+POS b 8,9
 
 SPR 2o
 01110000
@@ -2196,6 +2298,7 @@ SPR 2o
 11001000
 11001000
 NAME door_down_bed_1
+POS b 6,8
 
 SPR 2p
 11001000
@@ -2207,6 +2310,7 @@ SPR 2p
 11111000
 01110000
 NAME door_down_bed_2
+POS b 6,9
 
 SPR 2q
 00000000
@@ -2218,6 +2322,7 @@ SPR 2q
 01010101
 00000000
 NAME upsidedown_radiator
+POS c 7,5
 
 SPR 2r
 00000000
@@ -2229,6 +2334,7 @@ SPR 2r
 00011000
 00000000
 NAME upsidedown_tube
+POS c 5,9
 
 SPR 2s
 00000000
@@ -2240,6 +2346,7 @@ SPR 2s
 01111110
 00000000
 NAME upsidedown_trunk
+POS c 6,9
 
 SPR 2t
 00111111
@@ -2251,6 +2358,7 @@ SPR 2t
 01111111
 01111111
 NAME upsidedown_bed_1
+POS c 8,8
 
 SPR 2u
 11111100
@@ -2262,6 +2370,7 @@ SPR 2u
 11111110
 11111110
 NAME upsidedown_bed_2
+POS c 9,8
 
 SPR 2v
 11111110
@@ -2273,6 +2382,7 @@ SPR 2v
 11111110
 11111100
 NAME upsidedown_bed_3
+POS c 9,9
 
 SPR 2w
 01111111
@@ -2284,6 +2394,7 @@ SPR 2w
 01111111
 00111111
 NAME upsidedown_4
+POS c 8,9
 
 SPR 2x
 00111111
@@ -2549,6 +2660,150 @@ SPR 3n
 NAME anim_bed_4
 POS h 5,9
 
+SPR 3o
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME start_window
+POS 0 7,4
+
+SPR 3p
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME d2d_w_1
+POS 1 4,4
+
+SPR 3q
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME d2d_w_2
+POS 1 10,4
+
+SPR 3r
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME hole_w
+POS 2 7,4
+
+SPR 3s
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME locked_w
+POS 3 7,4
+
+SPR 3t
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME w2w_w
+POS 4 7,8
+
+SPR 3u
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME org_w
+POS 5 11,11
+
+SPR 3v
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME dark_w
+POS 6 7,4
+
+SPR 3w
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME dif_w
+POS 8 7,4
+
+SPR 3x
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME pieces_w
+POS 9 9,6
+
+SPR 3y
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME float_w
+POS a 7,4
+
+SPR 3z
+00000000
+10101010
+11111110
+10101010
+10101010
+11111110
+10101010
+00000000
+NAME float_radiator
+POS a 7,5
+
 ITM 0
 00000000
 00011000
@@ -2633,6 +2888,18 @@ ITM 6
 NAME item_bed_4
 DLG ITM_5
 
+ITM 7
+11111111
+10000001
+10000001
+10000001
+10000001
+10000001
+10000001
+11111111
+NAME item_window
+DLG ITM_7
+
 DLG ITM_0
 You pick up the metal tube
 
@@ -2668,6 +2935,9 @@ You pick up the top right-hand piece of the bed.
 
 DLG ITM_6
 You pick up the radiator.
+
+DLG ITM_7
+You pick up the window.
 
 VAR a
 42
